@@ -1,3 +1,6 @@
+--------- Market Version 65 (2.15) --------------
+ * Accellerometer controlled pitch bend in JAM
+
 --------- Market Version 64 (2.14) --------------
  * Added a Custom Scale to JAM, called CS1, and an editor.
 
